Loading screen html + css added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Algebreak</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
 </head>
-<body>  
+<body>
+    <div id="game-container">
+        <div id="loading-screen">
+            <div class="text">
+                <h1>Algebreak</h1>
+                <h3>Press Start</h3>
+            </div>
+        </div>
+    </div> 
 </body>
 <script type="module" src="script.js"></script>
 </html>
