--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 </head>
 <body>
     <div id="game-container">
-        <div id="loading-screen">
+        <div id="loading-screen" class="screen active">
             <h1>Algebreak</h1>
-            <h3>Press Start</h3>
+            <button id="start-button" onclick="toGame()">Press Start</button>
+        </div>
+        <div id="instructions" class="screen" style="display: none;">
+            <p>Hello World!</p>
         </div>
     </div> 
 </body>
-<script type="module" src="script.js"></script>
+<script src="script.js"></script>
 </html>
