Initial animation added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="game-container">
         <div id="loading-screen" class="screen active">
-            <h1>Algebreak</h1>
+            <h1 id="game-title">Algebreak</h1>
             <button id="start-button" onclick="toGame()">Press Start</button>
         </div>
         <div id="instructions" class="screen" style="display: none;">
